--- a/templates/solucao.html
+++ b/templates/solucao.html
@@ -22,7 +22,7 @@
     Agora adicionamos "Confira a solução do M para:" antes do título e da descrição.
   -->
   <meta property="og:title" content="Confira a solução do M para: {{ problema['titulo'] }}">
-  <meta property="og:description" content="Confira a solução do M para: {{ problema['descricao'] }} (via Plataforma M)">
+  <meta property="og:description" content={{ problema['descricao'] }} (via Plataforma M)">
   <meta property="og:image" content="{{ problem_image_url }}">
   <meta property="og:url" content="{{ share_url }}">
   <meta property="og:type" content="website">
